# polars

./: .gitignore  README.md
datasets/: foods1.xlsx  out1.xlsx
examples/python_rust_compiled_function/: Cargo.toml
python_rust_compiled_function/: Cargo.toml
python_rust_compiled_function/src/: ffi.rs
read_csv/: Cargo.toml
read_csv/src/: main.rs
read_json/: Cargo.toml
read_json/src/: main.rs
read_parquet/: Cargo.toml
read_parquet/src/: main.rs
read_parquet_cloud/: Cargo.toml
string_filter/: Cargo.toml
string_filter/src/: main.rs
write_ipc_cloud/: Cargo.toml
write_parquet_cloud/: Cargo.toml
