[package]
name = "python_rust_compiled_function"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_polars_functions"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "53.3.0", features = ["ffi"] }
polars = { version = "0.44.2" }

pyo3 = { version = "0.21.0", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.23.2"
